--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -15,6 +15,7 @@
     @import 'mixins/grid-framework';
     @import 'mixins/hamburger';
     @import 'mixins/hide-text';
+    @import 'mixins/icon-size';
     @import 'mixins/input-placeholder';
     @import 'mixins/media-queries';
     @import 'mixins/modular-scale';
