--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -260,6 +260,7 @@
 @form-message-font-size:        14px;
 @form-message-color:            @grey-600;
 @form-message-line-height:      1;
+@form-message-text-align:       inherit;
 
 // Fieldset with border
 @fieldset-border-width:         1px;
@@ -430,8 +431,11 @@
 // Field-group collapse
 @field-group-breakpoint:        @breakpoint-md;
 
-// Iconography
-@icon-font-size:                24px;
+// Icons (svg)
+@icon-small-size:               16px;
+@icon-medium-size:              24px;
+@icon-large-size:               32px;
+@icon-huge-size:                48px;
 
 // Border-radius
 @border-radius-small:           3px;
