--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -313,13 +313,13 @@
             padding: 0;
             outline: 0;
             height: auto;
-            font-size: inherit;
             background-color: transparent;
             box-shadow: none;
             &:focus,
             &:hover {
                 outline: none;
                 box-shadow: none;
+                background-color: transparent;
             }
         }
         textarea.textarea--unstyled {
