align form-messages

--- a/src/styles/objects/form-messages.less
+++ b/src/styles/objects/form-messages.less
@@ -10,6 +10,7 @@
         font-size: @form-message-font-size;
         color: @form-message-color;
         line-height: @form-message-line-height;
+        text-align: @form-message-text-align;
 
         // Success
         &--success {
