force icon fill color to inherit

--- a/src/styles/objects/icons.less
+++ b/src/styles/objects/icons.less
@@ -4,6 +4,7 @@
 // -------------------------------------------------------
 
     .icon {
+        fill: currentColor;
         display: inline-block;
         height: 1em;
         width: 1em;
