tags&badges, button fixes

--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -21,5 +21,6 @@
     @import 'mixins/modular-scale';
     @import 'mixins/momentum-scrolling';
     @import 'mixins/rgba';
+    @import 'mixins/tag-badge';
     @import 'mixins/text-overflow';
     @import 'mixins/pretty-scrollbars';
