--- a/src/styles/base/mixins/media-queries.less
+++ b/src/styles/base/mixins/media-queries.less
@@ -8,7 +8,6 @@
 // }
 
 // Variables
-
 @breakpoint-sm-min: @breakpoint-sm;
 @breakpoint-md-min: @breakpoint-md;
 @breakpoint-lg-min: @breakpoint-lg;
@@ -27,6 +26,11 @@
 // Potrait
 
 @potrait: ~"(orientation:portrait)";
+
+// Extra-extra-small
+
+@xxs-down: ~"(max-width: 320px)";
+@xxs-only: ~"(max-width: 320px)";
 
 // Extra-small
 
