--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -29,6 +29,7 @@
     @import 'objects/form-styles';
     @import 'objects/form-fields';
     @import 'objects/form-messages';
+    @import 'objects/tags-badges';
     @import 'objects/grid';
     @import 'objects/icons';
     @import 'objects/media';
