--- a/src/styles/utilities/utility-classes.less
+++ b/src/styles/utilities/utility-classes.less
@@ -6,11 +6,11 @@
     .u-center {
         .center();
     }
-    
+
     .u-center-block {
         .center-block();
     }
-    
+
     .u-cover {
         .cover();
     }
@@ -19,14 +19,14 @@
         height: 100%;
     }
 
-    .u-no-margin {
+    .u-remove-margin {
         margin: 0 !important;
     }
 
-    .u-no-padding {
+    .u-remove-padding {
         padding: 0 !important;
     }
-    
+
     .u-disable-pointer-events {
         pointer-events: none !important
     }
