bem animate classes

--- a/src/styles/base/print.less
+++ b/src/styles/base/print.less
@@ -13,6 +13,9 @@
             box-shadow: none !important;
             text-shadow: none !important;
         }
+        * {
+            opacity: 1 !important;
+        }
 
         a,
         a:visited {
