--- a/src/styles/objects/animate/bounce-in.less
+++ b/src/styles/objects/animate/bounce-in.less
@@ -18,7 +18,7 @@
             transform: none
         }
     }
-    .bounce-in {
+    .animate--bounce-in {
         animation-name: bounce-in;
     }
 }
