--- a/src/styles/objects/animate/fade-in-down.less
+++ b/src/styles/objects/animate/fade-in-down.less
@@ -9,7 +9,7 @@
             transform: none;
         }
     }
-    .fade-in-down {
+    .animate--fade-in-down {
         animation-name: fade-in-down;
     }
 }
