--- a/src/styles/objects/animate/fade-in-left.less
+++ b/src/styles/objects/animate/fade-in-left.less
@@ -9,7 +9,7 @@
             transform: none;
         }
     }
-    .fade-in-left {
+    .animate--fade-in-left {
         animation-name: fade-in-left;
     }
 }
