--- a/src/styles/objects/animate/fade-in-right.less
+++ b/src/styles/objects/animate/fade-in-right.less
@@ -9,7 +9,7 @@
             transform: none;
         }
     }
-    .fade-in-right {
+    .animate--fade-in-right {
         animation-name: fade-in-right;
     }
 }
