--- a/src/styles/objects/animate/fade-in-up.less
+++ b/src/styles/objects/animate/fade-in-up.less
@@ -9,7 +9,7 @@
             transform: none;
         }
     }
-    .fade-in-up {
+    .animate--fade-in-up {
         animation-name: fade-in-up;
     }
 }
