--- a/src/styles/objects/animate/fade-out-down.less
+++ b/src/styles/objects/animate/fade-out-down.less
@@ -9,7 +9,7 @@
             transform: translate3d(0, @spacing-double, 0);
         }
     }
-    .fade-out-down {
+    .animate--fade-out-down {
         animation-name: fade-out-down;
     }
 }
