--- a/src/styles/objects/animate/fade-out-left.less
+++ b/src/styles/objects/animate/fade-out-left.less
@@ -9,7 +9,7 @@
             transform: translate3d(-@spacing-double, 0, 0);
         }
     }
-    .fade-out-left {
+    .animate--fade-out-left {
         animation-name: fade-out-left;
     }
 }
