--- a/src/styles/objects/animate/fade-out-right.less
+++ b/src/styles/objects/animate/fade-out-right.less
@@ -9,7 +9,7 @@
             transform: translate3d(@spacing-double, 0, 0);
         }
     }
-    .fade-out-right {
+    .animate--fade-out-right {
         animation-name: fade-out-right;
     }
 }
