--- a/src/styles/objects/animate/slide-in-down.less
+++ b/src/styles/objects/animate/slide-in-down.less
@@ -8,7 +8,7 @@
             transform: none;
         }
     }
-    .slide-in-down {
+    .animate--slide-in-down {
         animation-name: slide-in-down;
     }
 }
