--- a/src/styles/objects/animate/slide-in-right.less
+++ b/src/styles/objects/animate/slide-in-right.less
@@ -8,7 +8,7 @@
             transform: none;
         }
     }
-    .slide-in-right {
+    .animate--slide-in-right {
         animation-name: slide-in-right;
     }
 }
