--- a/src/styles/objects/animate/slide-in-up.less
+++ b/src/styles/objects/animate/slide-in-up.less
@@ -8,7 +8,7 @@
             transform: none;
         }
     }
-    .slide-in-up {
+    .animate--slide-in-up {
         animation-name: slide-in-up;
     }
 }
