--- a/src/styles/objects/animate/slide-out-down.less
+++ b/src/styles/objects/animate/slide-out-down.less
@@ -8,7 +8,7 @@
             transform: translate3d(0, 100%, 0);
         }
     }
-    .slide-out-down {
+    .animate--slide-out-down {
         animation-name: slide-out-down;
     }
 }
