--- a/src/styles/objects/animate/swing.less
+++ b/src/styles/objects/animate/swing.less
@@ -16,7 +16,7 @@
             transform: none;
         }
     }
-    .swing {
+    .animate--swing {
         transform-origin: top center;
         animation-name: swing;
     }
