--- a/src/styles/objects/animate/bounce.less
+++ b/src/styles/objects/animate/bounce.less
@@ -20,7 +20,7 @@
             transform: translate3d(0, -4px, 0);
         }
     }
-    .bounce {
+    .animate--bounce {
         animation-name: bounce;
     }
 }
