--- a/src/styles/objects/animate/fade-out-up.less
+++ b/src/styles/objects/animate/fade-out-up.less
@@ -9,7 +9,7 @@
             transform: translate3d(0, -@spacing-double, 0);
         }
     }
-    .fade-out-up {
+    .animate--fade-out-up {
         animation-name: fade-out-up;
     }
 }
