--- a/src/styles/objects/animate/roll-out.less
+++ b/src/styles/objects/animate/roll-out.less
@@ -9,7 +9,7 @@
             transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
         }
     }
-    .roll-out {
+    .animate--roll-out {
         animation-name: roll-out;
     }
 }
