--- a/src/styles/objects/animate/shake.less
+++ b/src/styles/objects/animate/shake.less
@@ -18,7 +18,7 @@
             transform: translate3d(10px, 0, 0);
         }
     }
-    .shake {
+    .animate--shake {
         animation-name: shake;
     }
 }
