--- a/src/styles/objects/animate/slide-in-left.less
+++ b/src/styles/objects/animate/slide-in-left.less
@@ -8,7 +8,7 @@
             transform: none;
         }
     }
-    .slide-in-left {
+    .animate--slide-in-left {
         animation-name: slide-in-left;
     }
 }
