--- a/src/styles/objects/animate/slide-out-left.less
+++ b/src/styles/objects/animate/slide-out-left.less
@@ -8,7 +8,7 @@
             transform: translate3d(-100%, 0, 0);
         }
     }
-    .slide-out-left {
+    .animate--slide-out-left {
         animation-name: slide-out-left;
     }
 }
