--- a/src/styles/objects/animate/slide-out-right.less
+++ b/src/styles/objects/animate/slide-out-right.less
@@ -8,7 +8,7 @@
             transform: translate3d(100%, 0, 0);
         }
     }
-    .slide-out-right {
+    .animate--slide-out-right {
         animation-name: slide-out-right;
     }
 }
