--- a/src/styles/objects/animate/slide-out-up.less
+++ b/src/styles/objects/animate/slide-out-up.less
@@ -8,7 +8,7 @@
             transform: translate3d(0, -100%, 0);
         }
     }
-    .slide-out-up {
+    .animate--slide-out-up {
         animation-name: slide-out-up;
     }
 }
