--- a/src/styles/base/mixins/center.less
+++ b/src/styles/base/mixins/center.less
@@ -4,7 +4,7 @@
 
 // Absolutely center an element from the top and left
 // by 50% using .translate(-50%, -50%); to center
-// based on element size
+// based on element size.
 
 // Usage
 // .selector {
@@ -16,4 +16,17 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.center-vertical() {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+
+.center-horizontal() {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
