--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -233,14 +233,14 @@
 @blockquote-cite-color:         @grey-400;
 
 // Pullquote
-@pullquote-padding:              @spacing-third @spacing-two-thirds;
-@pullquote-border-color:         @color-secondary;
-@pullquote-border-width:         4px;
-@pullquote-font-family:          @base-font-family;
-@pullquote-font-style:           normal;
-@pullquote-font-size:            18px;
-@pullquote-cite-font-size:       14px;
-@pullquote-cite-color:           @grey-400;
+@pullquote-padding:             @spacing-third @spacing-two-thirds;
+@pullquote-border-color:        @color-secondary;
+@pullquote-border-width:        4px;
+@pullquote-font-family:         @base-font-family;
+@pullquote-font-style:          normal;
+@pullquote-font-size:           18px;
+@pullquote-cite-font-size:      14px;
+@pullquote-cite-color:          @grey-400;
 
 // Hr
 @hr-border-color:               @grey-100;
@@ -277,7 +277,6 @@
 // Inputs, textarea, select
 @input-color:                   @grey-800;
 @input-background:              @white;
-@input-hover-background:        @grey-25;
 @input-placeholder-color:       @grey-400;
 @input-placeholder-hover-color: @grey-500;
 @input-placeholder-focus-color: @grey-800;
@@ -380,8 +379,8 @@
 
 // TABLES
 // -------------------------------------------------------
-// Use table styles via classes: table-border, table-border-rows,
-// table-border-cells, table-stripes, table-responsive
+// Use table styles via classes: .table, .table--striped,
+// .table--bordered, .table--highlight & .table-responsive
 
 @table-font-size:               14px;
 @table-background:              transparent;
