baseline variable for svg icons

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -471,6 +471,7 @@
 @icon-medium-size:              24px;
 @icon-large-size:               32px;
 @icon-huge-size:                48px;
+@icon-baseline:                 -0.0625em;
 
 // Border-radius
 @border-radius-small:           3px;
