--- a/src/styles/objects/icons.less
+++ b/src/styles/objects/icons.less
@@ -15,7 +15,7 @@
     .button .icon,
     .icon--text-alignment {
         position: relative;
-        top: -0.0625em;
+        top: @icon-baseline;
     }
 
     // Icon sizes
