minor updates, version up

--- a/src/styles/objects/form-messages.less
+++ b/src/styles/objects/form-messages.less
@@ -4,6 +4,7 @@
 .use-form-messages(@boolean) when (@boolean =true) {
 
     .form-message {
+        display: block;
         margin: @form-message-vertical-margin 0;
         font-family: @form-message-font-family;
         font-weight: @form-message-font-weight;
