Fix missing variable

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -277,6 +277,7 @@
 // Inputs, textarea, select
 @input-color:                   @grey-800;
 @input-background:              @white;
+@input-hover-background:        grey-25;
 @input-placeholder-color:       @grey-400;
 @input-placeholder-hover-color: @grey-500;
 @input-placeholder-focus-color: @grey-800;
@@ -544,8 +545,8 @@
     @use-grid-column:           true;
     @use-grid-modifiers:        true;
 @use-table-styles:              true;
-@use-tags-badges:               true;
-@use-tooltips:                  true;
+@use-tags-badges:               false;
+@use-tooltips:                  false;
 @use-media:                     true;
 @use-loader:                    true;
 @use-responsive-navigation:     true;
