--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -305,6 +305,11 @@
             padding-left: (@input-horizontal-padding * 2);
             padding-right: (@input-horizontal-padding * 2);
         }
+        input.input--opaque,
+        select.select--opaque,
+        textarea.textarea--opaque{
+            background-color: transparent;
+        }
         input.input--unstyled,
         select.select--unstyled,
         textarea.textarea--unstyled {
