--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -537,7 +537,8 @@
 @use-screen-xl:                 true;
 
 // Objects
-@use-animations:                true;
+@use-animation:                 true;
+    @use-animation-modifiers:   true;
 @use-icons:                     true;
 @use-buttons:                   true;
 @use-button-group:              true;
