--- a/src/styles/objects/animate.less
+++ b/src/styles/objects/animate.less
@@ -1,7 +1,7 @@
 //
 // Animations
 // -------------------------------------------------------
-.animations(@boolean) when (@boolean =true) {
+.animation(@boolean) when (@boolean =true) {
 
     .animate {
         animation-duration: @transition-duration-default;
@@ -11,40 +11,48 @@
         will-change: transform, opacity;
     }
 
-    .animate--infinite {
-        animation-iteration-count: infinite;
-    }
+    // Animation modifiers
+    .animation-modifiers(@boolean) when (@boolean =true) {
+
+        .animate--infinite {
+            animation-iteration-count: infinite;
+        }
 
 
-    .animate--fast {
-        animation-duration: @transition-duration-fast !important;
-    }
-    .animate--faster {
-        animation-duration: @transition-duration-faster !important;
-    }
-    .animate--fastest {
-        animation-duration: @transition-duration-fastest !important;
-    }
-    .animate--slow {
-        animation-duration: @transition-duration-slow !important;
-    }
-    .animate--slower {
-        animation-duration: @transition-duration-slower !important;
-    }
-    .animate--slowest {
-        animation-duration: @transition-duration-slowest !important;
-    }
+        .animate--fast {
+            animation-duration: @transition-duration-fast !important;
+        }
+        .animate--faster {
+            animation-duration: @transition-duration-faster !important;
+        }
+        .animate--fastest {
+            animation-duration: @transition-duration-fastest !important;
+        }
+        .animate--slow {
+            animation-duration: @transition-duration-slow !important;
+        }
+        .animate--slower {
+            animation-duration: @transition-duration-slower !important;
+        }
+        .animate--slowest {
+            animation-duration: @transition-duration-slowest !important;
+        }
 
 
-    .animate--delay {
-        animation-delay: @transition-duration-default !important;
+        .animate--delay {
+            animation-delay: @transition-duration-default !important;
+        }
+        .animate--delay-short {
+            animation-delay: @transition-duration-default / 2 !important;
+        }
+        .animate--delay-long {
+            animation-delay: @transition-duration-default * 2 !important;
+        }
+
     }
-    .animate--delay-short {
-        animation-delay: @transition-duration-default / 2 !important;
-    }
-    .animate--delay-long {
-        animation-delay: @transition-duration-default * 2 !important;
-    }
+
+    .animation-modifiers(@use-animation-modifiers);
+
 
 
     // Enable/disable only animations you need.
@@ -98,4 +106,4 @@
 
 }
 
-.animations(@use-animations);
+.animation(@use-animation);
