--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -21,6 +21,7 @@
     @import 'mixins/modular-scale';
     @import 'mixins/momentum-scrolling';
     @import 'mixins/rgba';
+    @import 'mixins/scrim';
     @import 'mixins/tag-badge';
     @import 'mixins/text-overflow';
     @import 'mixins/pretty-scrollbars';
