--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -200,6 +200,7 @@
 @display4-font-weight:          400;
 
 // Lead paragraph styles
+@lead-font-family:              inherit;
 @lead-font-size:                21px;
 @lead-font-weight:              300;
 @lead-line-height:              @line-height-tight;
@@ -270,9 +271,13 @@
 // Label & legend
 @label-vertical-margin:         @spacing-fourth;
 @label-horizontal-margin:       @spacing-half;
+@label-font-family:             @base-font-family;
 @label-font-size:               inherit;
 @label-color:                   @base-color;
+@legend-font-family:            @base-font-family;
+@legend-font-size:               inherit;
 @legend-font-weight:            700;
+@legend-color:                  @base-color;
 
 // Inputs, textarea, select
 @input-color:                   @grey-800;
