--- a/src/styles/objects/form-fields.less
+++ b/src/styles/objects/form-fields.less
@@ -5,6 +5,7 @@
         // Field
         .field {
             display: block;
+            position: relative;
             clear: both;
             margin: 0 0 @form-field-margin 0;
             &:last-child {
