--- a/src/styles/base/typography.less
+++ b/src/styles/base/typography.less
@@ -133,6 +133,7 @@
 
     .lead {
         color: @lead-color;
+        font-family: @lead-font-family;
         font-size: @lead-font-size;
         font-weight: @lead-font-weight;
         line-height: @lead-line-height;
