--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -145,7 +145,7 @@
     // Select
     select:not([multiple]) {
         cursor: pointer;
-        background-image: url('../images/icons/select.svg');
+        background-image: url('../../images/icons/select.svg');
         background-position: right center;
         background-repeat: no-repeat;
         background-size: contain;
@@ -165,7 +165,7 @@
         }
         &:hover,
         &:focus {
-            background-image: url('../images/icons/select_hover.svg');
+            background-image: url('../../images/icons/select_hover.svg');
         }
     }
 
