Add tags and badges to style guide

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -557,8 +557,8 @@
     @use-grid-column:           true;
     @use-grid-modifiers:        true;
 @use-table-styles:              true;
-@use-tags-badges:               false;
-@use-tooltips:                  false;
+@use-tags-badges:               true;
+@use-tooltips:                  true;
 @use-media:                     true;
 @use-loader:                    true;
 @use-responsive-navigation:     true;
