tinkering with variables

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -28,9 +28,9 @@
 @container-lg:                  (@breakpoint-lg - @grid-gutter-width);
 @container-xl:                  (@breakpoint-xl - @grid-gutter-width);
 
-@container-fluid:               96vw;
+@container-fluid:               95vw;
 @container-fluid-max:           1600px;
-@container-fluid-inner:         82vw;
+@container-fluid-inner:         80vw;
 @container-fluid-inner-max:     1280px;
 @container-fluid-full:          100%;
 @container-fluid-full-max:      100%;
@@ -93,6 +93,7 @@
 @color-tumblr:                  #36465d;
 @color-twitter:                 #55acee;
 @color-vimeo:                   #1ab7ea;
+@color-whatsapp:                #25D366;
 @color-wordpress:               #21759b;
 @color-youtube:                 #cd201f;
 
