Fluid value mixing, fix caret to absolute position

--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -9,9 +9,9 @@
     @import 'mixins/center-block';
     @import 'mixins/clearfix';
     @import 'mixins/cover';
+    @import 'mixins/fluid-value';
     @import 'mixins/font-face';
     @import 'mixins/font-size';
-    @import 'mixins/font-size-fluid';
     @import 'mixins/grid-framework';
     @import 'mixins/hamburger';
     @import 'mixins/hide-text';
